eliminate the complication from file id

--- a/clone_detection.ipynb
+++ b/clone_detection.ipynb
@@ -40,18 +40,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 snippets exported to /home/mschen/code/nbooks/100to200\n",
-      "cd ~/code/ccfinderx-core/ccfx && ccfx d java  -dn /home/mschen/code/nbooks/100to200 -o /home/mschen/code/nbooks/100to200.ccfxd && ccfx p /home/mschen/code/nbooks/100to200.ccfxd > /home/mschen/code/nbooks/100to200.txt\n",
-      "...\n",
-      "Done\n",
-      "Done: /home/mschen/code/nbooks/100to200.txt written to source_files_100to200 and clone_pairs_100to200\n"
+      "4918 snippets exported to /home/mschen/code/nbooks/5k\n",
+      "cd ~/code/ccfinderx-core/ccfx && ccfx d java  -dn /home/mschen/code/nbooks/5k -o /home/mschen/code/nbooks/5k.ccfxd && ccfx p /home/mschen/code/nbooks/5k.ccfxd > /home/mschen/code/nbooks/5k.txt\n",
+      "...Done\n",
+      "Done: /home/mschen/code/nbooks/5k.txt written to source_files_5k and clone_pairs_5k\n"
      ]
     }
    ],
@@ -1874,6 +1873,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "tb_name_suffix = '5k'\n",
+    "with psycopg2.connect(connect_str) as conn:\n",
+    "        cursor = conn.cursor()\n",
+    "        sql_create = 'CREATE TABLE %s();'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -1892,18 +1917,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/mschen/code/nbooks/venv3/lib/python3.5/site-packages/psycopg2/__init__.py:144: UserWarning: The psycopg2 wheel package will be renamed from release 2.8; in order to keep installing from binary please use \"pip install psycopg2-binary\" instead. For details see: <http://initd.org/psycopg/docs/install.html#binary-install-from-pypi>.\n",
-      "  \"\"\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import Markdown, display\n",
     "import psycopg2\n",
@@ -1917,7 +1933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1927,7 +1943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1963,7 +1979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1973,19 +1989,20 @@
     "            if \"option: -preprocessed_file_postfix\" in line:\n",
     "                return line.split()[-1]\n",
     "\n",
-    "def sql_4ccfxd_file_block(line, tb_name):\n",
+    "def sql_4ccfxd_file_block(line, tb_name, fid_postid):\n",
     "    '''prepare SQL for ccfxd file block'''\n",
     "    file_info = line.split()\n",
     "    fid = file_info[0]\n",
     "    fname = \"\".join(file_info[1].split('/')[-1].split('.')[:-1])\n",
     "    postid, indx = fname.split('_')\n",
+    "    fid_postid[fid] = (postid, indx) \n",
     "    length = file_info[2]\n",
     "    sql = \"\"\"INSERT INTO %s(fid, postid, indx, length)\n",
     "VALUES(%s, %s, %s, %s) ON CONFLICT DO NOTHING;\"\"\" % (tb_name,\n",
     "    fid, postid, indx, length)\n",
     "    return sql\n",
     "\n",
-    "def sql_4ccfxd_pair_block(line, tb_name):\n",
+    "def sql_4ccfxd_pair_block(line, tb_name, fid_postid):\n",
     "    '''prepare SQL for ccfxd clone pair block'''\n",
     "    clone_pair = line.split()\n",
     "    pid = \":\".join(clone_pair[1:])  # unique pair id\n",
@@ -2001,13 +2018,13 @@
     "    tbegin1 = tmp[0]\n",
     "    tend1 = tmp[1]\n",
     "    sql = \"\"\"INSERT INTO %s(pid, cid,\n",
-    "fid0, tbegin0, tend0,\n",
-    "fid1, tbegin1, tend1\n",
+    "postid0, indx0, tbegin0, tend0,\n",
+    "postid1, indx1, tbegin1, tend1\n",
     ") VALUES ($aesc6$%s$aesc6$, %s,\n",
-    "%s, %s, %s,\n",
-    "%s, %s, %s) ON CONFLICT DO NOTHING;\"\"\" % (tb_name, pid, cid,\n",
-    "    fid0, tbegin0, tend0,\n",
-    "    fid1, tbegin1, tend1)\n",
+    "%s, %s, %s, %s,\n",
+    "%s, %s, %s, %s) ON CONFLICT DO NOTHING;\"\"\" % (tb_name, pid, cid,\n",
+    "    fid_postid[fid0][0], fid_postid[fid0][1], tbegin0, tend0,\n",
+    "    fid_postid[fid1][0], fid_postid[fid1][1], tbegin1, tend1)\n",
     "    return sql\n",
     "\n",
     "def ccfxd2db(ccfxd_txt_fpath, connect_str):\n",
@@ -2031,25 +2048,26 @@
     "        sql_create = \"\"\"CREATE TABLE IF NOT EXISTS %s(\n",
     "pid VARCHAR(64), \n",
     "cid INT,\n",
-    "fid0 INT,\n",
+    "postid0 INT,\n",
+    "indx0 INT,\n",
     "tbegin0 INT,\n",
     "tend0 INT,\n",
     "lbegin0 INT,\n",
     "lend0 INT,\n",
     "code0 VARCHAR(24060),\n",
-    "fid1 INT,\n",
+    "postid1 INT,\n",
+    "indx1 INT,\n",
     "tbegin1 INT,\n",
     "tend1 INT,\n",
     "lbegin1 INT,\n",
     "lend1 INT,\n",
     "code1 VARCHAR(24060),\n",
-    "PRIMARY KEY (pid),\n",
-    "FOREIGN KEY (fid0) REFERENCES %s(fid),\n",
-    "FOREIGN KEY (fid1) REFERENCES %s(fid)\n",
+    "PRIMARY KEY (pid)\n",
     "); \n",
-    "\"\"\" % (pair_tb_name, file_tb_name, file_tb_name)\n",
+    "\"\"\" % (pair_tb_name)\n",
     "        cursor.execute(sql_create)        \n",
     "        \n",
+    "        fid_postid = {}\n",
     "        with open(ccfxd_txt_fpath) as f:\n",
     "            parsing_fid = False\n",
     "            parsing_cid = False\n",
@@ -2061,7 +2079,7 @@
     "                    if line == '}\\n':\n",
     "                        parsing_fid = False\n",
     "                        continue\n",
-    "                    sql = sql_4ccfxd_file_block(line, file_tb_name)\n",
+    "                    sql = sql_4ccfxd_file_block(line, file_tb_name, fid_postid)\n",
     "                    cursor.execute(sql)\n",
     "\n",
     "                if line == 'clone_pairs {\\n':\n",
@@ -2071,7 +2089,7 @@
     "                    if line == '}\\n':\n",
     "                        parsing_cid = False\n",
     "                        continue\n",
-    "                    sql = sql_4ccfxd_pair_block(line, pair_tb_name)\n",
+    "                    sql = sql_4ccfxd_pair_block(line, pair_tb_name, fid_postid)\n",
     "                    cursor.execute(sql)\n",
     "    print(\"Done:\", ccfxd_txt_fpath,\"written to\", file_tb_name, \"and\", pair_tb_name)\n",
     "\n",
@@ -2100,32 +2118,14 @@
     "        cursor = conn.cursor()\n",
     "    #   1       2        3         4           5\n",
     "        sql = \"\"\"SELECT p.pid,\n",
-    "f0.postid, f0.indx, s0.code, p.tbegin0, p.tend0,\n",
-    "f1.postid, f1.indx, s1.code, p.tbegin1, p.tend1\n",
+    "p.postid0, p.indx0, s0.code, p.tbegin0, p.tend0,\n",
+    "p.postid1, p.indx1, s1.code, p.tbegin1, p.tend1\n",
     "FROM %s p\n",
-    "INNER JOIN %s f0\n",
-    "  ON p.fid0 = f0.fid\n",
     "INNER JOIN snippets s0\n",
-    "  ON f0.postid = s0.postid\n",
-    "INNER JOIN snippets ss0\n",
-    "  ON f0.indx = ss0.indx\n",
-    "INNER JOIN %s f1\n",
-    "  ON p.fid1 = f1.fid\n",
+    "  ON p.postid0 = s0.postid AND p.indx0 = s0.indx\n",
     "INNER JOIN snippets s1\n",
-    "  ON f1.postid = s1.postid\n",
-    "INNER JOIN snippets ss1\n",
-    "  ON f1.indx = ss1.indx\n",
-    "WHERE p.fid0 = f0.fid\n",
-    "  AND p.fid1 = f1.fid\n",
-    "  AND f0.postid = s0.postid\n",
-    "  AND f0.indx = ss0.indx\n",
-    "  AND s0.postid = ss0.postid\n",
-    "  AND s0.indx = ss0.indx\n",
-    "  AND f1.postid = s1.postid\n",
-    "  AND f1.indx = ss1.indx\n",
-    "  AND s1.postid = ss1.postid\n",
-    "  AND s1.indx = ss1.indx\n",
-    ";\"\"\" % (pair_tb_name, file_tb_name, file_tb_name)\n",
+    "  ON p.postid1 = s1.postid AND p.indx1 = s1.indx\n",
+    ";\"\"\" % (pair_tb_name)\n",
     "        cursor.execute(sql)\n",
     "        rows = cursor.fetchall()\n",
     "        for row in rows:\n",
@@ -2202,7 +2202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2260,7 +2260,7 @@
     "        file_tb_name = \"source_files_%s\" % (tb_name_suffix)\n",
     "        pair_tb_name = \"clone_pairs_%s\" % (tb_name_suffix)\n",
     "        cursor = conn.cursor()\n",
-    "        sql = \"\"\"SELECT DISTINCT s.postid, p.code0, p.lbegin0, p.lend0\n",
+    "        sql = \"\"\"SELECT DISTINCT s.postid, p.code0, p.lbegin0, p.lend0, ppo.title, ppo.tags\n",
     "FROM %s p\n",
     "INNER JOIN %s f\n",
     "  ON p.fid0 = f.fid\n",
@@ -2268,11 +2268,16 @@
     "  ON f.postid = s.postid\n",
     "INNER JOIN snippets ss\n",
     "  ON f.indx = ss.indx\n",
+    "INNER JOIN posts po\n",
+    "  ON f.postid = po.id\n",
+    "INNER JOIN posts ppo\n",
+    "  ON po.parentid = ppo.id\n",
     "WHERE p.fid0 = f.fid\n",
     "  AND f.postid = s.postid\n",
     "  AND f.indx = ss.indx\n",
     "  AND s.postid = ss.postid\n",
     "  AND s.indx = ss.indx\n",
+    "  AND f.postid = po.id\n",
     "  AND cid=%d\n",
     ";\"\"\" % (pair_tb_name, file_tb_name, cid)\n",
     "        if dry:\n",
@@ -2286,9 +2291,58 @@
     "        for i in range(n_rows):\n",
     "            print(\"----%d/%d----\" % (i, n_rows))\n",
     "            row = rows[i]\n",
+    "            print(row[4])\n",
+    "            print(row[5])\n",
     "            code0_url = url_prefix+str(row[0])+\"    Ln %d-%d\" % (row[2], row[3])\n",
     "            print(code0_url)\n",
-    "            codeprint(row[1])"
+    "            codeprint(row[1])\n",
+    "            \n",
+    "def drop_tables(tb_name_suffix, connect_str):\n",
+    "    with psycopg2.connect(connect_str) as conn:\n",
+    "        cursor = conn.cursor()\n",
+    "        sql = \"\"\"DROP TABLE clone_pairs_%s, source_files_%s;\"\"\" % (tb_name_suffix, tb_name_suffix)\n",
+    "        cursor.execute(sql)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "drop_tables('5k', connect_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "specific_group_check(cid=26940, tb_name_suffix='all', connect_str=connect_str)"
    ]
   },
   {
@@ -2321,10 +2375,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object supporting the buffer API required",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-24-70b8b27bcf4c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mrows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrows\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhashlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msha224\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: object supporting the buffer API required"
+     ]
+    }
+   ],
+   "source": [
+    "with psycopg2.connect(connect_str) as conn:\n",
+    "    cursor = conn.cursor()\n",
+    "    sql = 'SELECT code from snippets where postid=3888451'\n",
+    "    cursor.execute(sql)\n",
+    "    rows = cursor.fetchall()\n",
+    "    for row in rows:\n",
+    "        print(hashlib.sha224(row).hexdigest())"
+   ]
   },
   {
    "cell_type": "code",
@@ -2342,17 +2416,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a4337bc45a8fc544c03f52dc550cd6e1e87021bc896588bd79e901e2'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import hashlib \n",
+    "hashlib.sha224(b\"Nobody inspects the spammish repetition\").hexdigest()"
+   ]
   },
   {
    "cell_type": "code",
