add labeling ui

--- a/clone_detection.ipynb
+++ b/clone_detection.ipynb
@@ -40,23 +40,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4918 snippets exported to /home/mschen/code/nbooks/5k\n",
-      "cd ~/code/ccfinderx-core/ccfx && ccfx d java  -dn /home/mschen/code/nbooks/5k -o /home/mschen/code/nbooks/5k.ccfxd && ccfx p /home/mschen/code/nbooks/5k.ccfxd > /home/mschen/code/nbooks/5k.txt\n",
+      "25855 snippets exported to /home/mschen/code/nbooks/all\n",
+      "cd ~/code/ccfinderx-core/ccfx && ccfx d java  -dn /home/mschen/code/nbooks/all -o /home/mschen/code/nbooks/all.ccfxd && ccfx p /home/mschen/code/nbooks/all.ccfxd > /home/mschen/code/nbooks/all.txt\n",
       "...Done\n",
-      "Done: /home/mschen/code/nbooks/5k.txt written to source_files_5k and clone_pairs_5k\n"
+      "Done: /home/mschen/code/nbooks/all.txt written to source_files_all and clone_pairs_all\n"
      ]
     }
    ],
    "source": [
-    "snippet_dname = '5k'\n",
-    "snippet_id_range = (0,5000)\n",
+    "snippet_dname = 'all'\n",
+    "#snippet_id_range = (0,5000)\n",
+    "snippet_id_range = (0,50000000)\n",
     "ccf_opt = ''\n",
     "detect_clones(snippet_dname, ccf_opt, snippet_id_range, connect_str=connect_str)"
    ]
@@ -1979,7 +1980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2065,7 +2066,14 @@
     "PRIMARY KEY (pid)\n",
     "); \n",
     "\"\"\" % (pair_tb_name)\n",
-    "        cursor.execute(sql_create)        \n",
+    "        cursor.execute(sql_create)\n",
+    "        \n",
+    "        # also create the label table\n",
+    "        sql_create = \"\"\"CREATE TABLE labels_%s(\n",
+    "cid INT, slabel INT,\n",
+    "PRIMARY KEY (cid));        \n",
+    "\"\"\" % (tb_name_suffix)\n",
+    "        cursor.execute(sql_create)\n",
     "        \n",
     "        fid_postid = {}\n",
     "        with open(ccfxd_txt_fpath) as f:\n",
@@ -2202,7 +2210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2300,17 +2308,127 @@
     "def drop_tables(tb_name_suffix, connect_str):\n",
     "    with psycopg2.connect(connect_str) as conn:\n",
     "        cursor = conn.cursor()\n",
-    "        sql = \"\"\"DROP TABLE clone_pairs_%s, source_files_%s;\"\"\" % (tb_name_suffix, tb_name_suffix)\n",
-    "        cursor.execute(sql)"
+    "        sql = \"\"\"DROP TABLE IF EXISTS clone_pairs_%s, source_files_%s, labels_%s;\"\"\" % (tb_name_suffix, tb_name_suffix, tb_name_suffix)\n",
+    "        cursor.execute(sql)\n",
+    "\n",
+    "def get_cids(tb_name_suffix, filterstr, connect_str):\n",
+    "    with psycopg2.connect(connect_str) as conn:\n",
+    "        cursor = conn.cursor()\n",
+    "        sql = \"\"\"SELECT DISTINCT cid FROM clone_pairs_%s %s\"\"\" % (tb_name_suffix, filterstr)\n",
+    "        cursor.execute(sql)\n",
+    "        rows = cursor.fetchall()\n",
+    "        cids = [row[0] for row in rows]\n",
+    "        return cids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
-    "drop_tables('5k', connect_str)"
+    "def label_ui(tb_name_suffix, filterstr, connect_str):\n",
+    "    cids = get_cids(tb_name_suffix, filterstr, connect_str)\n",
+    "    print(\"start labeling %d clone groups\" % (len(cids)))\n",
+    "    url_prefix = \"http://stackoverflow.com/questions/\"\n",
+    "    with psycopg2.connect(connect_str) as conn:\n",
+    "        cursor = conn.cursor()\n",
+    "        for cid in cids:\n",
+    "            check_sql = \"\"\"select exists(select 1 from labels_%s where cid=%d);\"\"\" % (tb_name_suffix, cid)\n",
+    "            cursor.execute(check_sql)\n",
+    "            rows = cursor.fetchall()\n",
+    "            already_labelled = rows[0][0]\n",
+    "            if already_labelled:\n",
+    "                retrieve_sql = \"\"\"select slabel from labels_%s where cid=%d;\"\"\" % (tb_name_suffix, cid)\n",
+    "                cursor.execute(retrieve_sql)\n",
+    "                rows = cursor.fetchall()\n",
+    "                existing_label = rows[0][0]\n",
+    "            sql = \"\"\"SELECT code0 FROM clone_pairs_%s WHERE cid=%d\"\"\" % (tb_name_suffix, cid)\n",
+    "            cursor.execute(sql)\n",
+    "            rows = cursor.fetchall()\n",
+    "            n_rows = len(rows)\n",
+    "            print(\"========Clone group cid: %d, containing %d clone elements=========\" % (cid, n_rows))\n",
+    "            for i in range(n_rows):\n",
+    "                print(\"----%d/%d----\" % (i, n_rows))\n",
+    "                row = rows[i]\n",
+    "                code0_url = url_prefix+str(row[0])\n",
+    "                print(code0_url)\n",
+    "                print(\"\")\n",
+    "                codeprint(row[0])\n",
+    "            if already_labelled:\n",
+    "                slabel = int(input(\"existing label (%d)\" % existing_label))\n",
+    "            else:\n",
+    "                slabel = int(input(\"security label:\"))\n",
+    "            label_sql = \"\"\"INSERT INTO labels_%s(cid, slabel) VALUES(%d, %d) ON CONFLICT(cid) DO UPDATE\n",
+    "SET (cid, slabel) = (%d, %d);\"\"\" % (tb_name_suffix, cid, slabel, cid, slabel)\n",
+    "            cursor.execute(label_sql)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start labeling 0 clone groups\n"
+     ]
+    }
+   ],
+   "source": [
+    "filterstr = \"WHERE code0 LIKE '%eBy%'\"\n",
+    "filterstr = \"WHERE postid0 = 35822671\"\n",
+    "label_ui(\"5k\", filterstr, connect_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "drop_tables('all', connect_str)"
    ]
   },
   {
